assets/css/style.scss
---
---

.navbar {
  flex-wrap: wrap;
}

.navbar-menu {
  flex-shrink: 1;
}

.navbar-start {
  flex-wrap: wrap;
}

tbody tr th {
    font-weight: normal;
}

th.rating-title, td.rating  {
    text-align: center;
}

th.sort {
  cursor: pointer;
}

td {
  a {
    display: inline-block;
    width: 100%;
    height: 100%;
  }
}

ul {
  list-style-type: none;
}

.hidden {
  display: none;
}

